# QuickTile

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTIONS.md  LICENSE  README.md  SUPPORT.md  build.ps1  generated_version.h.in  release.ps1
.github/workflows/: build-quicktile.yml
src/: pch.h
src/app/: app_commands.h  app_state.h  main.cpp  shortcuts.cpp  shortcuts.h
src/config/: config.h  settings.cpp  settings.h
src/layout/: direction_resize.cpp  direction_resize.h  layout_engine.cpp  layout_engine.h  layout_helpers.h  layout_managers.cpp  layout_managers.h  layout_metadata.h  layout_model.h  layout_policy.cpp  layout_policy.h  layout_types.h  length_allocator.cpp  length_allocator.h
src/platform/: file_watcher.cpp  file_watcher.h  logger.cpp  logger.h  shell_integration.cpp  shell_integration.h  single_instance.cpp  single_instance.h
src/ui/: drop_preview_overlay.cpp  drop_preview_overlay.h  status_overlay.cpp  status_overlay.h  status_overlay_internal.h  systray.cpp  systray.h  top_bar.cpp  top_bar.h
src/windows/: event_router.cpp  event_router.h  focus_tracker.cpp  focus_tracker.h  inspect_window.cpp  inspect_window.h  window_classifier.cpp  window_classifier.h  window_geometry.cpp  window_geometry.h  window_manager.cpp  window_manager.h  window_manager_tiling.cpp
src/workspace/: virtual_desktop.cpp  virtual_desktop.h  workspace_manager.cpp  workspace_manager.h  workspace_model.cpp  workspace_model.h
tests/: quicktile_tests.cpp
